<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PopupDismissCatchableSpinner</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="number_0">0</string>
    <string name="close_count">Close Count:</string>
    <string name="open_count">Open Count:</string>
    <string name="country_prompt">Choose a country</string>
    <string name="use_listener">Use listener</string>
    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>
</resources>
